--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //build the sqlite database
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source = Database.sqlite"
+  }
 }
