--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   //build the sqlite database
   "ConnectionStrings": {
-    "SqlConnection": "Data Source = Database.sqlite"
+    "SqlConnection": "Data Source = TaskDatabase.sqlite"
   }
 }
