--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },"AllowedHosts": "*"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source = Applications.sqlite"
+  }
 
 }
